# lfb

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: clinical_subs_10_benign_10_pathogenic.csv  downloads.sh
data/test_data/: BLAT_ECOLX_Stiffler_2015.tsv
scripts/glm/: 1_make_bed_from_vcf.py  2_liftover_to_zoonomia.py  3_get_sequences.py  4_score_evo.py
scripts/plm/: predict_lfb.py  produce_alignment.sh
src/lfb/: __init__.py  alignment.py  constants.py  utils.py
src/lfb/inference/: scorer.py
src/lfb/model/: model.py
src/lfb/model/progen/: __init__.py  configuration_progen.py  modeling_progen.py  tokenizer.py
